--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 #startButton {
     text-align: center;
-    margin: 1% auto;
+    margin: 15% auto 0 auto;
 }
 
 button {
@@ -73,4 +73,9 @@ img {
 .answerDiv {
     text-align: center;
     margin: 1% auto;    
+}
+
+#startOverButton {
+    text-align: center;
+    margin: 1% auto;
 }
